[pc-10] Fix oversized content in table on Firefox

--- a/certif/app/styles/globals/tables.scss
+++ b/certif/app/styles/globals/tables.scss
@@ -34,6 +34,7 @@
   td, th {
     text-align: left;
     padding-left: 15px;
+    box-sizing: content-box;
   }
 
   td.row--center, th.row--center {
